force-app/main/default/objects/NotionRelation__mdt/NotionRelation__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for relationship mappings between Salesforce and Notion objects</description>
    <label>Notion Relation</label>
    <pluralLabel>Notion Relations</pluralLabel>
</CustomObject>