force-app/main/default/objects/NotionRelation__mdt/fields/ChildObject__c.field-meta.xml
<CustomField>
    <fullName>ChildObject__c</fullName>
    <description>Reference to the child NotionSyncObject metadata</description>
    <label>Child Object</label>
    <referenceTo>NotionSyncObject__mdt</referenceTo>
    <relationshipLabel>Child Relations</relationshipLabel>
    <relationshipName>ChildRelations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>