force-app/main/default/objects/NotionRelation__mdt/fields/EnableCascadeDelete__c.field-meta.xml
<CustomField>
    <fullName>EnableCascadeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, deleting a parent record will also delete related child records in Notion. Default is false for safety.</description>
    <label>Enable Cascade Delete</label>
    <type>Checkbox</type>
</CustomField>