force-app/main/default/objects/NotionRelation__mdt/fields/NotionRelationPropertyName__c.field-meta.xml
<CustomField>
    <fullName>NotionRelationPropertyName__c</fullName>
    <description>Name of the relation property in Notion database</description>
    <label>Notion Relation Property Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>