force-app/main/default/objects/NotionRelation__mdt/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <description>Reference to parent NotionSyncObject__mdt</description>
    <label>Parent Object</label>
    <referenceTo>NotionSyncObject__mdt</referenceTo>
    <relationshipLabel>Parent Notion Relations</relationshipLabel>
    <relationshipName>ParentNotionRelations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>