force-app/main/default/objects/NotionRelation__mdt/fields/SalesforceRelationshipField__c.field-meta.xml
<CustomField>
    <fullName>SalesforceRelationshipField__c</fullName>
    <description>API name of the lookup or master-detail field in Salesforce</description>
    <label>Salesforce Relationship Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>